--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,19 @@ cmake_minimum_required (VERSION 3.1.1)
 set(CMAKE_CXX_STANDARD 20)
 project (cppfront-exp)
 
-find_package(BISON)
-BISON_TARGET(Cpp2Parser src/parser/cpp2.ypp ${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp)
-
 include_directories(${cppfront-exp_SOURCE_DIR}/src)
+
+add_executable(packcc thirdparty/packcc/packcc.c)
+
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp ${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.h
+                   COMMAND packcc -l -o ${CMAKE_CURRENT_BINARY_DIR}/cpp2parser ${CMAKE_CURRENT_SOURCE_DIR}/src/parser/cpp2.peg
+                   DEPENDS packcc src/parser/cpp2.peg VERBATIM)
 
 add_executable(cppfront-exp
 	src/cppfront.cpp
 	src/parser/AST.cpp
-	src/parser/Lexer.cpp
 	src/parser/Parser.cpp
-	${BISON_Cpp2Parser_OUTPUTS}
+	src/parser/Range.cpp
+	src/parser/Source.cpp
+	${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp
 )
-
-add_executable(packcc thirdparty/packcc/packcc.c)
