keep track of declarations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ add_executable(cppfront-exp
 	src/parser/Parser.cpp
 	src/parser/Range.cpp
 	src/parser/Source.cpp
+	src/program/Declaration.cpp
+	src/program/Module.cpp
+	src/program/Namespace.cpp
 	src/semana/SemanticAnalysis.cpp
 	${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp
 )
