start with constructing a program representation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,13 +12,17 @@ add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp ${CMAKE_CUR
 
 add_executable(cppfront-exp
 	src/cppfront.cpp
+	src/infra/Hash.cpp
 	src/parser/AST.cpp
 	src/parser/Parser.cpp
 	src/parser/Range.cpp
 	src/parser/Source.cpp
 	src/program/Declaration.cpp
+	src/program/FunctionType.cpp
 	src/program/Module.cpp
 	src/program/Namespace.cpp
+	src/program/Program.cpp
+	src/program/Type.cpp
 	src/semana/SemanticAnalysis.cpp
 	${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp
 )
