prepare for mocking the C++1 stdlib
For type inference we have to know the interface of the existing C++1
stdlib. We could get that from, e.g., libclang, but that would add a
very heavy dependency to this experiment. Thus, we will simply mock the
existing C++1 stdlib in C++2 for now.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(cppfront-exp
 	src/program/Type.cpp
 	src/semana/Scope.cpp
 	src/semana/SemanticAnalysis.cpp
+	src/stdlib/Stdlib.cpp
 	${CMAKE_CURRENT_BINARY_DIR}/cpp2parser.cpp
 )
 
